adding login page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a class="nav-link js-scroll-trigger" href="#signup">Sign Up</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#login">Log In</a>
+              <a class="nav-link js-scroll-trigger" href="./signin.html">Log In</a>
             </li>
           </ul>
         </div>
@@ -64,7 +64,7 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">The SaaS platform for developing and monitoring your diverse workforce</p>
+            <p class="text mb-5">The SaaS platform for developing and monitoring your diverse workforce</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
