--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text mb-5">The SaaS platform for developing and monitoring your diverse workforce</p>
+            <p class="text mb-5">The SaaS platform for developing and monitoring your diverse workforce.</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
