--- a/client/form.html
+++ b/client/form.html
@@ -1,28 +1,28 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/form.css">
-  <title>Candidate Profile</title>
-</head>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/form.css">
+    <title>Candidate Profile</title>
+  </head>
 
-<body>
-  <div class="logo-wrapper">
-    <img src="https://loremflickr.com/320/240" class="rounded" alt="" />
-  </div>
-  <div class="container">
-    <h1>Candidate Profile</h1>
-    <ul class="nav nav-tabs">
-      <li class="active">
-        <a href="#tab1" data-toggle="tab">General Info</a>
-      </li>
+  <body>
+    <div class="logo-wrapper">
+      <img src="https://loremflickr.com/320/240" class="rounded" alt="" />
+    </div>
+    <div class="container">
+      <h1>Candidate Profile</h1>
+      <ul class="nav nav-tabs">
+        <li class="active">
+          <a href="#tab1" data-toggle="tab">General Info</a>
+        </li>
       <li class="nav-item">
         <a href="#tab2" data-toggle="tab">
           Diversity Form
@@ -35,113 +35,120 @@
     <div class="tab-content">
       <div class="tab-pane active" id="tab1">
         <form>
-          <div class="form-group">
-            <label for="first">First Name</label>
-            <input type="first" class="form-control" id="firstname" placeholder="first name">
-          </div>
-          <div class="form-group">
-            <label for="last">Last</label>
-            <input type="last" class="form-control" id="lastname" placeholder="last name">
-          </div>
-          <div class="form-group">
-            <label for="address">Address</label>
-            <input type="address" class="form-control" id="address" placeholder="address">
-          </div>
-          <div class="form-group">
-            <label for="city">City</label>
-            <input type="city" class="form-control" id="city" placeholder="city">
-          </div>
-          <div class="form-group">
-            <label for="state">State</label>
-            <select class="form-control" id="state">
-              <option value="">N/A</option>
-              <option value="AK">Alaska</option>
-              <option value="AL">Alabama</option>
-              <option value="AR">Arkansas</option>
-              <option value="AZ">Arizona</option>
-              <option value="CA">California</option>
-              <option value="CO">Colorado</option>
-              <option value="CT">Connecticut</option>
-              <option value="DC">District of Columbia</option>
-              <option value="DE">Delaware</option>
-              <option value="FL">Florida</option>
-              <option value="GA">Georgia</option>
-              <option value="HI">Hawaii</option>
-              <option value="IA">Iowa</option>
-              <option value="ID">Idaho</option>
-              <option value="IL">Illinois</option>
-              <option value="IN">Indiana</option>
-              <option value="KS">Kansas</option>
-              <option value="KY">Kentucky</option>
-              <option value="LA">Louisiana</option>
-              <option value="MA">Massachusetts</option>
-              <option value="MD">Maryland</option>
-              <option value="ME">Maine</option>
-              <option value="MI">Michigan</option>
-              <option value="MN">Minnesota</option>
-              <option value="MO">Missouri</option>
-              <option value="MS">Mississippi</option>
-              <option value="MT">Montana</option>
-              <option value="NC">North Carolina</option>
-              <option value="ND">North Dakota</option>
-              <option value="NE">Nebraska</option>
-              <option value="NH">New Hampshire</option>
-              <option value="NJ">New Jersey</option>
-              <option value="NM">New Mexico</option>
-              <option value="NV">Nevada</option>
-              <option value="NY">New York</option>
-              <option value="OH">Ohio</option>
-              <option value="OK">Oklahoma</option>
-              <option value="OR">Oregon</option>
-              <option value="PA">Pennsylvania</option>
-              <option value="PR">Puerto Rico</option>
-              <option value="RI">Rhode Island</option>
-              <option value="SC">South Carolina</option>
-              <option value="SD">South Dakota</option>
-              <option value="TN">Tennessee</option>
-              <option value="TX">Texas</option>
-              <option value="UT">Utah</option>
-              <option value="VA">Virginia</option>
-              <option value="VT">Vermont</option>
-              <option value="WA">Washington</option>
-              <option value="WI">Wisconsin</option>
-              <option value="WV">West Virginia</option>
-              <option value="WY">Wyoming</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="zipcode">Zip Code</label>
-            <input type="zipcode" class="form-control" id="zipcode" placeholder="zipcode">
-          </div>
-          <div class="form-group">
-            <label for="jobType">Job Type</label>
-            <div class="checkbox">
-              <label><input type="checkbox" value="">Part-Time</label>
+          <div class="form-group row">
+            <div class="col-xs-4">
+              <label for="address">Address</label>
+              <input type="address" class="form-control" id="address" placeholder="address">
             </div>
-            <div class="checkbox">
-              <label><input type="checkbox" value="">Full-Time</label>
+            <div class="col-xs-4">
+              <label for="city">City</label>
+              <input type="city" class="form-control" id="city" placeholder="city">
             </div>
-            <div class="checkbox">
-              <label><input type="checkbox" value="">Contract</label>
+            <div class="col-xs-4">
+              <label for="state">State</label>
+              <select class="form-control" id="state">
+                <option value="">N/A</option>
+                <option value="AK">Alaska</option>
+                <option value="AL">Alabama</option>
+                <option value="AR">Arkansas</option>
+                <option value="AZ">Arizona</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="CT">Connecticut</option>
+                <option value="DC">District of Columbia</option>
+                <option value="DE">Delaware</option>
+                <option value="FL">Florida</option>
+                <option value="GA">Georgia</option>
+                <option value="HI">Hawaii</option>
+                <option value="IA">Iowa</option>
+                <option value="ID">Idaho</option>
+                <option value="IL">Illinois</option>
+                <option value="IN">Indiana</option>
+                <option value="KS">Kansas</option>
+                <option value="KY">Kentucky</option>
+                <option value="LA">Louisiana</option>
+                <option value="MA">Massachusetts</option>
+                <option value="MD">Maryland</option>
+                <option value="ME">Maine</option>
+                <option value="MI">Michigan</option>
+                <option value="MN">Minnesota</option>
+                <option value="MO">Missouri</option>
+                <option value="MS">Mississippi</option>
+                <option value="MT">Montana</option>
+                <option value="NC">North Carolina</option>
+                <option value="ND">North Dakota</option>
+                <option value="NE">Nebraska</option>
+                <option value="NH">New Hampshire</option>
+                <option value="NJ">New Jersey</option>
+                <option value="NM">New Mexico</option>
+                <option value="NV">Nevada</option>
+                <option value="NY">New York</option>
+                <option value="OH">Ohio</option>
+                <option value="OK">Oklahoma</option>
+                <option value="OR">Oregon</option>
+                <option value="PA">Pennsylvania</option>
+                <option value="PR">Puerto Rico</option>
+                <option value="RI">Rhode Island</option>
+                <option value="SC">South Carolina</option>
+                <option value="SD">South Dakota</option>
+                <option value="TN">Tennessee</option>
+                <option value="TX">Texas</option>
+                <option value="UT">Utah</option>
+                <option value="VA">Virginia</option>
+                <option value="VT">Vermont</option>
+                <option value="WA">Washington</option>
+                <option value="WI">Wisconsin</option>
+                <option value="WV">West Virginia</option>
+                <option value="WY">Wyoming</option>
+              </select>
             </div>
-            <div class="checkbox">
-              <label><input type="checkbox" value="">Temporary</label>
+
+            <!-- Zip Code -->
+            <div class="col-xs-4">
+              <label for="zipcode">Zip Code</label>
+              <input type="zipcode" class="form-control" id="zipcode" placeholder="zipcode">
             </div>
-            <div class="checkbox">
-              <label><input type="checkbox" value="">Commission</label>
+
+            <!-- Job Type -->
+            <div class="col-xs-4">
+              <label for="jobType">Job Type</label>
+              <div class="checkbox">
+                <label><input type="checkbox" value="">Part-Time</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" value="">Full-Time</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" value="">Contract</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" value="">Temporary</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" value="">Commission</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" value="">Internship</label>
+              </div>
             </div>
-            <div class="checkbox">
-              <label><input type="checkbox" value="">Internship</label>
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Bio</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
 
+            <!-- Bio -->
+
+          <div class="form-group-lg">
+            <div class="">
+              <label for="exampleFormControlTextarea1">Bio</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+          </div>
         </form>
-        <a class="btn btn-primary btnNext">Next</a>
+
+                  <!-- Next btn -->
+        <a class="btn btn-primary pull-right btnNext">Next</a>
+
       </div>
+
+            <!-- tab 2 -->
       <div class="tab-pane" id="tab2">
         <form>
           <!-- Vet info -->
@@ -315,35 +322,43 @@
           </div>
         </form>
         <a class="btn btn-primary btnPrevious">Previous</a>
-        <a class="btn btn-primary btnNext">Next</a>
+        <a class="btn btn-primary pull-right btnNext">Next</a>
       </div>
+
+            <!-- tab 3 -->
       <div class="tab-pane" id="tab3">
         <form>
-          <div class="form-group">
-            <label for="Job Field">Job Field</label>
-            <select class="form-control">
-              <option>Architecture, Planning & Environmental Design</option>
-              <option>Arts,Culture & Entertainment</a></option>
-              <option>Communications</option>
-              <option>Business</option>
-              <option>Education</option>
-              <option>Engineering & Computer Science</option>
-              <option>Environment</option>
-              <option>Government</option>
-              <option>Health & Medicine</option>
-              <option>International</option>
-              <option>Law & Public Policy</option>
-              <option>Social Impact/Community Service</option>
-              <option>Sciences-Biological & Physical</option>
-            </select>
+          <div class="form-group row">
+            <div class="col-xs-4">
+              <label for="Job Field">Job Field</label>
+              <select class="form-control">
+                <option>Architecture, Planning & Environmental Design</option>
+                <option>Arts,Culture & Entertainment</a></option>
+                <option>Communications</option>
+                <option>Business</option>
+                <option>Education</option>
+                <option>Engineering & Computer Science</option>
+                <option>Environment</option>
+                <option>Government</option>
+                <option>Health & Medicine</option>
+                <option>International</option>
+                <option>Law & Public Policy</option>
+                <option>Social Impact/Community Service</option>
+                <option>Sciences-Biological & Physical</option>
+              </select>
+            </div>
           </div>
         </form>
+
+        <!-- relocate -->
         <div class="form-group">
           <label for="relocate">Are you willing to relocate?</label>
           <div class="checkbox">
             <label><input type="checkbox" value="">Yes</label>
           </div>
         </div>
+
+        <!-- upload file -->
         <form class="md-form">
           <div class="file-field">
             <div class="btn btn-primary btn-sm float-left">
@@ -352,18 +367,24 @@
             </div>
           </div>
         </form>
+
+        <!-- date start -->
         <form>
-          <div class="form-group">
-            <label for="start-date-input" class="col-2 col-form-label">Date you can start</label>
-            <div class="col-10">
-              <input class="form-control" type="date" value="2011-08-19" id="example-date-input">
+          <div class="form group row">
+            <div class="col-xs-4">
+              <label for="start-date-input" class="col-2 col-form-label">Date you can start</label>
+              <div class="col-10">
+                <input class="form-control" type="date" value="2011-08-19" id="example-date-input">
+              </div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         </form>
+
+        <!-- Submit btn -->
+        <button type="submit" class="btn btn-primary">Submit</button>
+
       </div>
     </div>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -372,6 +393,5 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
       crossorigin="anonymous"></script>
     <script src="./js/form.js"></script>
-</body>
-
+  </body>
 </html>
